Fix multi select overflow issue in min-layout fields

--- a/sass/blocks/_boss-form.sass
+++ b/sass/blocks/_boss-form.sass
@@ -210,11 +210,14 @@ $block: ".boss-form"
     &_layout_max
       flex-grow: 1
       flex-shrink: 1
-      width: 100%
+      width: auto
+
+      @media screen and (max-width: 960px)
+        width: 100%
 
     &_layout_min
       flex-grow: 0
-      flex-shrink: 0
+      flex-shrink: 1
       width: auto
 
     &_layout_fluid
@@ -355,7 +358,7 @@ $block: ".boss-form"
   // $Common form control
   &__control
     flex-grow: 0
-    flex-shrink: 0
+    flex-shrink: 1
     display: flex
     flex-direction: row
     justify-content: flex-start
@@ -686,7 +689,6 @@ $block: ".boss-form"
       height: 53px
       border-radius: 2px
       border-color: #d8d8d8
-      white-space: nowrap
 
     & .Select-placeholder,
     & .Select--single > .Select-control .Select-value
